tests/units/ill-typed/bad_ignore.stella
language core;
extend with #unit-type;

fn ignore(_ : Nat) -> Unit {
  return 0
}

fn main(x : Nat) -> Nat {
	return x 		 
}